test-cases/negative/test_051_missing_expression_after_throw.lay
# negative test: throw without expression
# expected: parser should reject this

throw


